kubernetes/apps/default/fusion/networkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fusion-egress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: fusion
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
